tests/Compilation/negative/test001.juvix
-- pattern matching coverage
module test001;

open import Stdlib.Prelude;

f : List Nat -> List Nat -> Nat;
f (x :: xs) (y :: ys) := x + y;
f _ (_ :: (z :: zs)) := z;
f _ nil := 0;

main : Nat;
main := f (1 :: nil) (2 :: nil);

end;
